feat: signing up with email, password, username
